--- a/camera_viewer/package.xml
+++ b/camera_viewer/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="">ajgrinds</maintainer>
+  <maintainer email="ajgrinds03@gmail.com">ajgrinds</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
