--- a/package.xml
+++ b/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>camera_viewer</name>
+  <name>cameras</name>
   <version>0.0.0</version>
   <description>The pilot / camera_viewer package</description>
 
